--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
+SetOutputFilter DEFLATE
+AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
+
 Options +FollowSymLinks -MultiViews
 # Turn mod_rewrite on
 RewriteEngine On
